# chat

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: args.rs  client.rs  main.rs
common/: Cargo.toml
common/src/: message.rs
server/: Cargo.toml
server/src/: accept.rs  args.rs  client.rs  internal.rs  main.rs  server.rs
